[package]
name = "neo_eink"
version = "0.1.0"
authors = ["simson"]
edition = "2018"

[dependencies]
linux-embedded-hal = "0.2.2"
# nb = "0.1.1"
nix = "0.11.0"
epd-waveshare = { version = "0.2.0", default-features = false, features = ["epd1in54", "graphics"]}
embedded-graphics = "0.4.3"
sysfs_gpio = "0.5.3"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"
